# bazel-to-cmake-integration

./: .dockerignore  .gitignore  LICENSE  Makefile  README.md  test.py
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: build.yml  test.yml
bzl_header_only/: BUILD
main_project/cmk/: CMakeLists.txt
main_project/cmk/cmake/: bazel.cmake
src/bazel-to-cmake-integration/: bazel.cmake  bazel.py
src/test/: test.py
src/test/project/bzl_header_only/: BUILD  header.hpp
src/test/project/bzl_world/: .bazelrc  BUILD  MODULE.bazel  bazel-bzl_world
src/test/project/bzl_world/include/world/: world.hpp
src/test/project/bzl_world/src/: world.cpp
src/test/project/main_project/: MODULE.bazel  bazel-main_project
src/test/project/main_project/bzl/: BUILD  bzl.cpp  bzl.hpp
src/test/project/main_project/cmk/: CMakeLists.txt  main.cpp
